engine/src/kernel/public/kernel_api.h

typedef struct KernelHandle KernelHandle;
typedef struct KernelLANDiscoveryHandle KernelLANDiscoveryHandle;
typedef uint64_t KernelRpcRequestId;
/*
 * C ABI ownership and lifetime rules:
 * - Kernel_Create returns an opaque handle owned by the caller.
 * - Kernel_Destroy releases that handle; passing NULL is allowed.
 * - Callers own all input and output buffers passed to this API.
 * - Output buffer contents are copied during the call; the kernel does not
 *   retain caller buffer pointers after a function returns.
 * - Handles are single-thread owned unless a future ABI revision states
 *   otherwise.
 * - No C++ exceptions cross this ABI. Failures return NULL, false, or 0.
 */

bool Kernel_GetAbiInfo(KernelAbiInfo* out_info, uint32_t out_info_size);
bool Kernel_GetBuildInfo(KernelBuildInfo* out_info, uint32_t out_info_size);
bool Kernel_GetLocalPlayerInfo(
    KernelHandle* kernel,
    KernelLocalPlayerInfo* out_info);
KernelLANDiscoveryHandle* Kernel_LANDiscovery_Create(void);
void Kernel_LANDiscovery_Destroy(KernelLANDiscoveryHandle* discovery);
bool Kernel_LANDiscovery_StartServer(
    KernelLANDiscoveryHandle* discovery,
    const KernelLANDiscoveryServerConfig* config);
void Kernel_LANDiscovery_StopServer(KernelLANDiscoveryHandle* discovery);
bool Kernel_LANDiscovery_Query(
    KernelLANDiscoveryHandle* discovery,
    const KernelLANDiscoveryQueryConfig* config);
uint32_t Kernel_LANDiscovery_PollResults(
    KernelLANDiscoveryHandle* discovery,
    KernelLANDiscoveryResult* out_results,
    uint32_t max_results);
void Kernel_LANDiscovery_ClearResults(KernelLANDiscoveryHandle* discovery);
KernelHandle* Kernel_Create(const KernelConfig* config);
void Kernel_Destroy(KernelHandle* kernel);
bool Kernel_SetPhysicsConfig(
    KernelHandle* kernel,
    const KernelPhysicsConfig* config);
bool Kernel_SetSessionRules(
    KernelHandle* kernel,
    const KernelSessionRulesConfig* config);
bool Kernel_SetStaticCollisionScene(
    KernelHandle* kernel,
    const KernelStaticCollisionSceneConfig* config);
bool Kernel_InvokeRpcCommand(
    KernelHandle* kernel,
    const char* request_json,
    uint32_t request_json_size,
    KernelRpcRequestId* out_request_id);
bool Kernel_PollRpcResponse(
    KernelHandle* kernel,
    KernelRpcRequestId request_id,
    char* out_response_json,
    uint32_t response_json_capacity,
    uint32_t* out_response_json_size);
bool Kernel_StartClient(KernelHandle* kernel, const char* address);
bool Kernel_StartClientCatalogSync(
    KernelHandle* kernel,
    const char* address,
    const KernelGameplayCatalogSyncClientConfig* config);
bool Kernel_StartListenServer(KernelHandle* kernel, uint16_t port);
bool Kernel_StartDedicatedServer(KernelHandle* kernel, uint16_t port);
bool Kernel_SetGameplayCatalogSyncBundle(
    KernelHandle* kernel,
    const KernelGameplayCatalogSyncServerConfig* config,
    KernelGameplayCatalogManifest* out_manifest);
bool Kernel_GetGameplayCatalogSyncStatus(
    KernelHandle* kernel,
    KernelGameplayCatalogSyncStatus* out_status);
bool Kernel_RequestGameplayCatalogBundle(KernelHandle* kernel);
bool Kernel_CopyGameplayCatalogBundle(
    KernelHandle* kernel,
    uint8_t* out_bundle,
    uint32_t out_capacity,
    uint32_t* out_bundle_size);
bool Kernel_ContinueClientHandshake(KernelHandle* kernel);
void Kernel_Update(KernelHandle* kernel, float delta_seconds);
void Kernel_SubmitPlayerInput(
    KernelHandle* kernel,
    uint32_t local_player_id,
    const KernelPlayerInput* input);
bool Kernel_LoadGameplayCatalog(
    KernelHandle* kernel,
    const KernelGameplayCatalogDefinition* catalog,
    const KernelGameplayCatalogLoadOptions* options);
bool Kernel_LoadGameplayCatalogFromMemory(
    KernelHandle* kernel,
    const uint8_t* bundle_bytes,
    uint32_t bundle_size,
    const char* entry_path,
    KernelGameplayCatalogLoadResult* out_result);
uint32_t Kernel_GetRenderStates(
    KernelHandle* kernel,
    RenderEntityState* out_states,
    uint32_t max_states);
uint32_t Kernel_GetRenderStatesAtTime(
    KernelHandle* kernel,
    uint64_t client_render_time_us,
    RenderEntityState* out_states,
    uint32_t max_states);
uint32_t Kernel_GetSkeletonRenderStates(
    KernelHandle* kernel,
    KernelSkeletonRenderState* out_states,
    uint32_t max_states,
    KernelBoneLocalTransform* out_bone_transforms,
    uint32_t max_bone_transforms,
    KernelSkeletonRenderStateResult* out_result);
uint32_t Kernel_GetSkeletonRenderStatesAtTime(
    KernelHandle* kernel,
    uint64_t client_render_time_us,
    KernelSkeletonRenderState* out_states,
    uint32_t max_states,
    KernelBoneLocalTransform* out_bone_transforms,
    uint32_t max_bone_transforms,
    KernelSkeletonRenderStateResult* out_result);
/*
 * Copies the native Ozz bind pose for a loaded skeleton asset. Returns the
 * complete bone count while writing at most max_bone_transforms entries, or 0
 * for an invalid handle, unknown asset, or content-hash mismatch.
 */
uint32_t Kernel_GetSkeletonBindPose(
    KernelHandle* kernel,
    uint32_t skeleton_asset_id,
    uint64_t skeleton_content_hash,
    KernelBoneLocalTransform* out_bone_transforms,
    uint32_t max_bone_transforms);
uint32_t Kernel_PollEvents(
    KernelHandle* kernel,
    KernelEvent* out_events,
    uint32_t max_events);
uint32_t Kernel_PollEntityLifecycleEvents(
    KernelHandle* kernel,
    KernelEntityLifecycleEvent* out_events,
    uint32_t max_events);
uint32_t Kernel_PollLocalActionResults(
    KernelHandle* kernel,
    KernelLocalActionResult* out_results,
    uint32_t max_results);
uint32_t Kernel_PollRemoteActionPresentationEvents(
    KernelHandle* kernel,
    KernelRemoteActionPresentationEvent* out_events,
    uint32_t max_events);
/*
 * Returns the complete active-status count while writing at most max_effects
 * entries. Server/listen results are authoritative; a pure client's local
 * player is reliable and remote entities are best effort.
 */
uint32_t Kernel_QueryStatusEffects(
    KernelHandle* kernel,
    uint32_t entity_net_id,
    KernelStatusEffectView* out_effects,
    uint32_t max_effects);
bool Kernel_GetBenchmarkStats(
    KernelHandle* kernel,
    KernelBenchmarkStats* out_stats);
bool Kernel_GetNetworkStats(
    KernelHandle* kernel,
    KernelNetworkStats* out_stats);
uint32_t Kernel_PollDebugRecords(
    KernelHandle* kernel,
    const KernelDebugRecordFilter* filter,
    KernelDebugInfo* out_records,
    uint32_t max_records);
uint32_t Kernel_QueryColliderShapes(
    KernelHandle* kernel,
    const KernelColliderShapeQuery* query,
    KernelColliderShapeView* out_shapes,
    uint32_t max_shapes);