plugins/com.network-example.kernel/Runtime/Core/KernelNative.cs

using System;
using System.Runtime.InteropServices;

namespace NetworkExample.Kernel
{
    internal static class KernelNative
    {
        internal const string LibraryName = "network_kernel";

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetAbiInfo(
            out KernelAbiInfo outInfo,
            uint outInfoSize);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetBuildInfo(
            out KernelBuildInfo outInfo,
            uint outInfoSize);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetLocalPlayerInfo(
            IntPtr kernel,
            out KernelLocalPlayerInfo outInfo);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr Kernel_LANDiscovery_Create();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_LANDiscovery_Destroy(IntPtr discovery);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_LANDiscovery_StartServer(
            IntPtr discovery,
            ref KernelLANDiscoveryServerConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_LANDiscovery_StopServer(IntPtr discovery);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_LANDiscovery_Query(
            IntPtr discovery,
            ref KernelLANDiscoveryQueryConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_LANDiscovery_PollResults(
            IntPtr discovery,
            [Out] KernelLANDiscoveryResult[] outResults,
            uint maxResults);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_LANDiscovery_ClearResults(IntPtr discovery);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr Kernel_Create(ref KernelConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_Destroy(IntPtr kernel);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_SetPhysicsConfig(
            IntPtr kernel,
            ref KernelPhysicsConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_SetSessionRules(
            IntPtr kernel,
            ref KernelSessionRulesConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_SetStaticCollisionScene(
            IntPtr kernel,
            ref KernelStaticCollisionSceneConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_InvokeRpcCommand(
            IntPtr kernel,
            [In] byte[] requestJson,
            uint requestJsonSize,
            out ulong outRequestId);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_PollRpcResponse(
            IntPtr kernel,
            ulong requestId,
            IntPtr outResponseJson,
            uint responseJsonCapacity,
            out uint outResponseJsonSize);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_StartClient(
            IntPtr kernel,
            [MarshalAs(UnmanagedType.LPStr)] string address);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_StartClientCatalogSync(
            IntPtr kernel,
            [MarshalAs(UnmanagedType.LPStr)] string address,
            ref KernelGameplayCatalogSyncClientConfig config);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_StartListenServer(IntPtr kernel, ushort port);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_StartDedicatedServer(IntPtr kernel, ushort port);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_SetGameplayCatalogSyncBundle(
            IntPtr kernel,
            ref KernelGameplayCatalogSyncServerConfig config,
            ref KernelGameplayCatalogManifest outManifest);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetGameplayCatalogSyncStatus(
            IntPtr kernel,
            ref KernelGameplayCatalogSyncStatus outStatus);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_RequestGameplayCatalogBundle(IntPtr kernel);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_CopyGameplayCatalogBundle(
            IntPtr kernel,
            [Out] byte[] outBundle,
            uint outCapacity,
            out uint outBundleSize);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_ContinueClientHandshake(IntPtr kernel);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_Update(IntPtr kernel, float deltaSeconds);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void Kernel_SubmitPlayerInput(
            IntPtr kernel,
            uint localPlayerId,
            ref KernelPlayerInput input);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_LoadGameplayCatalog(
            IntPtr kernel,
            ref KernelGameplayCatalogDefinition catalog,
            IntPtr options);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_LoadGameplayCatalogFromMemory(
            IntPtr kernel,
            [In] byte[] bundleBytes,
            uint bundleSize,
            [MarshalAs(UnmanagedType.LPStr)] string entryPath,
            ref KernelGameplayCatalogLoadResult outResult);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetRenderStates(
            IntPtr kernel,
            [Out] RenderEntityState[] outStates,
            uint maxStates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetRenderStatesAtTime(
            IntPtr kernel,
            ulong clientRenderTimeUs,
            [Out] RenderEntityState[] outStates,
            uint maxStates);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetSkeletonRenderStates(
            IntPtr kernel,
            [Out] KernelSkeletonRenderState[] outStates,
            uint maxStates,
            [Out] KernelBoneLocalTransform[] outBoneTransforms,
            uint maxBoneTransforms,
            ref KernelSkeletonRenderStateResult outResult);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetSkeletonRenderStatesAtTime(
            IntPtr kernel,
            ulong clientRenderTimeUs,
            [Out] KernelSkeletonRenderState[] outStates,
            uint maxStates,
            [Out] KernelBoneLocalTransform[] outBoneTransforms,
            uint maxBoneTransforms,
            ref KernelSkeletonRenderStateResult outResult);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_GetSkeletonBindPose(
            IntPtr kernel,
            uint skeletonAssetId,
            ulong skeletonContentHash,
            [Out] KernelBoneLocalTransform[] outBoneTransforms,
            uint maxBoneTransforms);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollEvents(
            IntPtr kernel,
            [Out] KernelEvent[] outEvents,
            uint maxEvents);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollEntityLifecycleEvents(
            IntPtr kernel,
            [Out] KernelEntityLifecycleEvent[] outEvents,
            uint maxEvents);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollLocalActionResults(
            IntPtr kernel,
            [Out] KernelLocalActionResult[] outResults,
            uint maxResults);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollRemoteActionPresentationEvents(
            IntPtr kernel,
            [Out] KernelRemoteActionPresentationEvent[] outEvents,
            uint maxEvents);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_QueryStatusEffects(
            IntPtr kernel,
            uint entityNetId,
            [Out] KernelStatusEffectView[] outEffects,
            uint maxEffects);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetBenchmarkStats(
            IntPtr kernel,
            ref KernelBenchmarkStats outStats);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        internal static extern bool Kernel_GetNetworkStats(
            IntPtr kernel,
            ref KernelNetworkStats outStats);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_PollDebugRecords(
            IntPtr kernel,
            IntPtr filter,
            [Out] KernelDebugInfo[] outRecords,
            uint maxRecords);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint Kernel_QueryColliderShapes(
            IntPtr kernel,
            IntPtr query,
            [Out] KernelColliderShapeView[] outShapes,
            uint maxShapes);
